--- a/package.json
+++ b/package.json
@@ -2,15 +2,11 @@
   "name": "my-portfolio-showcase",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://opelish081.github.io/my-portforilo-showcase",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "lint": "eslint ."
   },
   "dependencies": {
     "bootstrap": "^5.3.6",
@@ -26,7 +22,6 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "vite": "^6.3.5"
   }
